# Dynamic_ComfyUI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  dynamiccomfy.db  test_docker.py
backend/app/: main.py
backend/app/api/routers/: auth.py  instances.py  models.py
backend/app/core/: deps.py  security.py  settings.py
backend/app/domain/: models.py  schemas.py
backend/app/infrastructure/: database.py  instance_repository.py  shared_model_repository.py  user_repository.py
backend/app/services/: auth_service.py  auto_kill_service.py  docker_manager.py  model_downloader.py
backend/scripts/: seed_user.py
comfy/: Dockerfile
scripts/: bootstrap_server.sh
